erDiagram
    AUTH_USERS ||--|| PROFILES : "id"
    PROFILES ||--o{ PARKINGS : "owner_id"
    PROFILES ||--o{ BOOKINGS : "user_id"
    PROFILES ||--o{ PAYMENT_METHODS : "user_id"
    PROFILES ||--o{ ADMIN_ACTIVITY_LOG : "actor_id"
    PROFILES ||--o| APP_SETTINGS : "updated_by"
    PARKINGS ||--o{ BOOKINGS : "parking_id"

    AUTH_USERS {
        uuid id PK
        text email
    }

    PROFILES {
        uuid id PK
        text email
        text name
        text phone
        text role
        text avatar
        boolean suspended
        timestamptz suspended_at
        text suspended_reason
    }

    PARKINGS {
        text id PK
        uuid owner_id FK
        text name
        text address
        numeric price_per_hour
        jsonb availability
        float lat
        float lng
        text status
    }

    BOOKINGS {
        text id PK
        uuid user_id FK
        text parking_id FK
        date date
        text status
        numeric total_price
        text payment_method
        boolean refunded
        timestamptz refunded_at
        jsonb review
    }

    PAYMENT_METHODS {
        text id PK
        uuid user_id FK
        text category
        text type
        text label
        boolean is_default
    }

    APP_SETTINGS {
        text id PK
        boolean bookings_disabled
        text message
        uuid updated_by FK
    }

    ADMIN_ACTIVITY_LOG {
        uuid id PK
        uuid actor_id FK
        text actor_name
        text action_type
        text summary
        text entity_type
        text entity_label
    }
